# Workflow-fire

./: .gitignore  CMakeLists.txt  README
config/: config.txt
include/: config_manager.h  data_output.h  data_parser.h  data_processing_engine.h  data_source.h  http_data_output.h  http_data_parser.h  http_data_source.h  pipe_data_output.h  pipe_data_parser.h  pipe_data_source.h
src/: config_manager.cpp  data_processing_engine.cpp  http_data_output.cpp  http_data_parser.cpp  http_data_source.cpp  main.cpp  pipe_data_output.cpp  pipe_data_parser.cpp  pipe_data_source.cpp
